external-crates/move/crates/move-compiler/tests/move_check/typing/spec_block_fail.exp
error[E03004]: unbound type
  ┌─ tests/move_check/typing/spec_block_fail.move:3:10
  │
3 │         (spec {}: u64);
  │          ^^^^ Unbound type 'spec' in current scope

error[E03004]: unbound type
  ┌─ tests/move_check/typing/spec_block_fail.move:4:10
  │
4 │         (spec {}: &u64);
  │          ^^^^ Unbound type 'spec' in current scope

error[E03004]: unbound type
  ┌─ tests/move_check/typing/spec_block_fail.move:5:10
  │
5 │         (spec {}: (u64, u64));
  │          ^^^^ Unbound type 'spec' in current scope

